# rithm

./: .gitignore  Dockerfile.dev  README.md  pyproject.toml  pytest.ini
.devcontainer/: devcontainer.json
rithm/: __main__.py  exceptions.py  expr.py  interpreter.py  logging.py  namespace.py  parser.py  rithm.py  scanner.py  stmt.py  token.py
rithm/datatypes/: algo.py  docs.py  literal.py  numeric.py  string.py
rithm/examples/data/: manifest.md
rithm/tests/: conftest.py  process_titanic.rtm  test_interpreter.py  test_parser.py  test_scanner.py
