[tool.poetry]
name = "rithm"
version = "0.1.0"
description = "A language to make working with data easier"
authors = ["Your Name <you@example.com>"]
license = "GNU GPL 3"

[tool.poetry.dependencies]
python = "~3.10"
pandas = "^1.3.5"
fire = "^0.4.0"
black = "^21.12b0"
rich = "^10.0.0"
pdbr = "^0.6.7"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"